# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-03-30 09:57:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-45

    Summary:
      html, implement parser with generators
    Revision:
      itools--main--0.8--patch-45


    new files:
     html/.arch-ids/parser.py.id html/parser.py

    modified files:
     Changelog html/HTML.py xml/STL.py xml/XML.py xml/parser.py


2005-03-29 17:03:00 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-44

    Summary:
      xml, started new parser, with generators
    Revision:
      itools--main--0.8--patch-44

    The new module 'parser' contains a wrapper around expat that
    provides an interface to parse an XML document through a
    generator style interface (see 'XML.Document._load').

    new files:
     xml/.arch-ids/parser.py.id xml/parser.py

    modified files:
     Changelog xml/STL.py xml/XML.py


2005-03-28 16:11:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-43

    Summary:
      xml, fixing bugs
    Revision:
      itools--main--0.8--patch-43


    modified files:
     Changelog html/HTML.py xhtml/XHTML.py xml/Schema.py xml/XML.py
     xml/namespaces.py


2005-03-28 15:06:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-42

    Summary:
      xml, move the namespace registry to its own module
    Revision:
      itools--main--0.8--patch-42

    Add also a registry from namespace prefix to uri.

    new files:
     xml/.arch-ids/namespaces.py.id xml/namespaces.py

    modified files:
     Changelog xhtml/XHTML.py xml/DublinCore.py xml/STL.py
     xml/XML.py


2005-03-27 18:06:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-41

    Summary:
      uri, now 'itools.uri' is a package instead of a module
    Revision:
      itools--main--0.8--patch-41

    The 'itools.uri' code has been clened. The special case of empty
    references works now.
    
    Also, the script 'igettext' works again.

    new files: